# graspit_script

./: CMakeLists.txt  README.md  graspit_script_config.ini
data/worlds/tless/: obj_21.xml
include/: graspit_interface.h
scripts/: README.md  tless_generate_ply.py
src/: graspit_interface.cpp
